@@ -1,3 +1,8 @@
+2010-06-14  Eric B. Weddington  <eric.weddington@atmel.com>
+
+	* include/avr/pgmspace.h: Remove new features regarding new segments.
+	Feature not yet ready. Correct comment.
+
 2010-06-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* include/avr/pgmspace.h: Remove the #error for architectures that
